@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.16
 
+	- The scheduler didn't reset the job state to pending
+	  when modifying an active printer.
 	- Now limit the maximum number of recursion steps when
 	  searching for a filter for a job, in case a user
 	  defines a circular filter rule.
